--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,6 @@ Build-Depends:
  kms-core-6.0-dev,
  kms-elements-6.0-dev,
  kms-filters-6.0-dev,
- kms-jsonrpc-dev (>= 0.2.0),
  libboost-dev,
  libboost-system-dev,
  libboost-filesystem-dev,
@@ -27,8 +26,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  kms-elements-6.0,
  kms-filters-6.0,
- kms-core-6.0,
- kms-jsonrpc (>= 0.2.0)
+ kms-core-6.0
 Replaces:
  kurento,
  kurento-media-server
