ResourceManager: Set percent limit as configurable
Change-Id: Icbf5f88bef01188add510195b8fa637442bb4345

--- a/kurento.conf.ini
+++ b/kurento.conf.ini
@@ -1,3 +1,6 @@
+; [mediaServer.resources]
+; Resources usage limit for raising an exception when an object creation is attempted
+; exceptionLimit=0.8
 [mediaServer.net.websocket]
 port=8888
 path=kurento
