--- a/kurento.conf.ini
+++ b/kurento.conf.ini
@@ -1,6 +1,9 @@
 ; [mediaServer.resources]
 ; Resources usage limit for raising an exception when an object creation is attempted
 ; exceptionLimit=0.8
+; Resources usage limit for restarting the server when no objects are alive
+; killLimit=0.7
+
 [mediaServer.net.websocket]
 port=8888
 path=kurento
