--- a/kurento.conf.ini
+++ b/kurento.conf.ini
@@ -1,8 +1,10 @@
-; [mediaServer.resources]
+[mediaServer.resources]
 ; Resources usage limit for raising an exception when an object creation is attempted
 ; exceptionLimit=0.8
 ; Resources usage limit for restarting the server when no objects are alive
 ; killLimit=0.7
+; Garbage collector period in seconds
+garbageCollectorPeriod=240
 
 [mediaServer.net.websocket]
 port=8888
