--- a/scaffold/rules.template
+++ b/scaffold/rules.template
@@ -8,4 +8,4 @@
 	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure
+	dh_auto_configure -- -DDISABLE_TESTS=TRUE -DCMAKE_INSTALL_SYSCONFDIR=/etc
