Remove rabbitmq support
We are not using them and it is not manained

Change-Id: Ic701307c42190e0f994c59ce18cacf98f9041e39

--- a/server/transport/CMakeLists.txt
+++ b/server/transport/CMakeLists.txt
@@ -7,12 +7,11 @@ set (TRANSPORT_SOURCES
 
 add_library (transport ${TRANSPORT_SOURCES})
 
-add_dependencies(transport rabbitMQTransport)
+add_dependencies(transport websocketTransport)
 
 target_link_libraries(transport
   ${GSTREAMER_LIBRARIES}
   ${KMSCORE_LIBRARIES}
-  rabbitMQTransport
   websocketTransport
 )
 
@@ -20,13 +19,10 @@ set_property (TARGET transport
   PROPERTY INCLUDE_DIRECTORIES
     ${CMAKE_SOURCE_DIR}/server/signalHandler
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/rabbitmq/
     ${CMAKE_CURRENT_SOURCE_DIR}/websocket/
     ${GSTREAMER_INCLUDE_DIRS}
     ${GLIBMM_INCLUDE_DIRS}
     ${KMSCORE_INCLUDE_DIRS}
 )
-
-add_subdirectory(rabbitmq)
 
 add_subdirectory(websocket)
