--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,7 @@ Build-Depends:
  libboost-thread-dev,
  libboost-log-dev,
  libevent-dev,
- libssl-dev,
- librabbitmq-dev
+ libssl-dev
 Standards-Version: 3.9.4
 
 Package: kurento-media-server-6.0
