--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends:
  cmake,
  debhelper (>= 7.0.50),
  binutils,
+ kms-jsonrpc-1.0-dev (>= 1.1.0~0),
  kms-core-6.0-dev (>= 6.2.0),
  kms-elements-6.0-dev (>= 6.2.0),
  kms-filters-6.0-dev (>= 6.2.0),
@@ -24,6 +25,7 @@ Package: kurento-media-server-6.0
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  binutils,
+ kms-jsonrpc-1.0 (>= 1.1.0~0),
  libgstreamer1.5-0 (>= 1.7.0~0),
  gstreamer1.5-plugins-base (>= 1.7.0~0),
  gstreamer1.5-libav (>= 1.7.0~0),
