CMake: Remove references to root cmake directories
Change-Id: I263b6016290431f82cced8c7674556143e54bfba

--- a/scaffold/CMakeLists_root.txt.template
+++ b/scaffold/CMakeLists_root.txt.template
@@ -13,7 +13,7 @@ message ("If CodeGenerator is not found, then it is necessary to install
           kms-core package from the kurento repository")
 include (CodeGenerator)
 
-get_values_from_model(PREFIX VALUE MODELS ${CMAKE_SOURCE_DIR}/src/server/interface KEYS version)
+get_values_from_model(PREFIX VALUE MODELS ${CMAKE_CURRENT_SOURCE_DIR}/src/server/interface KEYS version)
 
 get_git_version (PROJECT_VERSION ${VALUE_VERSION})
 
