--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -35,8 +35,7 @@ target_link_libraries (kurento-media-server
 
 set_property (TARGET kurento-media-server
   PROPERTY INCLUDE_DIRECTORIES
-    ${CMAKE_BINARY_DIR}
-    ${CMAKE_BINARY_DIR}/gen-cpp
+    ${CMAKE_CURRENT_BINARY_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/transport
     ${KMSCORE_INCLUDE_DIRS}
