CMakeList: Add missing link library
Change-Id: I184a7d4e1bc791e46dabce649d6a6b2ed25af487

--- a/server/transport/websocket/CMakeLists.txt
+++ b/server/transport/websocket/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(websocketTransport
   ${GSTREAMER_LIBRARIES}
   ${JSONRPC_LIBRARIES}
   ${OPENSSL_LIBRARIES}
+  ${KMSCORE_LIBRARIES}
 )
 
 set_property (TARGET websocketTransport
