registrar_test: Make certificate loading independent of the build directory
Change-Id: Icd5a779cc63746674d9174dad78b37fa0e88afe8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ else()
   set (FIX_SIGC FALSE)
 endif()
 
+set (TEST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test)
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 add_subdirectory(server)
