--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -159,6 +159,7 @@ set_property (TARGET test_registrar
   PROPERTY INCLUDE_DIRECTORIES
     ${KMSCORE_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/../server/transport/websocket
+    ${CMAKE_CURRENT_BINARY_DIR}/..
 )
 
 endif(NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
