Full review: all root CMake files in all KMS projects
- Unify GCC flags for C and C++ over all CMakeLists.txt
- Don't add an explicit "-g" flag: CMake already adds it for Debug
configurations.
- Reorganize lines to bring together includes() and usages of the
included module.
- Unify irregular style of funcion: use CMake default of no space
between funcion names and their opening parenthesis.
- Add initial message at the begining of each CMake file: print "Running
CMake for project: <ProjectName>"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,60 +1,70 @@
 cmake_minimum_required(VERSION 2.8)
 
-project ("kurento-media-server")
+project("kurento-media-server")
+message(STATUS "Running CMake for project: ${PROJECT_NAME}")
 
-message ("If KurentoHelpers is not found, then it is necessary to install
-          kms-cmake-utils package from the kurento repository")
+# Set GCC flags common to all projects
+set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -std=c11   -Wall -Werror")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Werror")
 
+# Reduce default Release optimization level from -O3 to -O2
+set(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE}   -O2")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
+
+# This project includes an input "config.h.cmake"
+set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -DHAVE_CONFIG_H")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_CONFIG_H")
+
+# Disable deprecated GStreamer APIs
+set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -DGST_DISABLE_DEPRECATED")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGST_DISABLE_DEPRECATED")
+
+# Disable error when macros __TIME__, __DATE__ or __TIMESTAMP__ are encountered
+# include(CheckCXXCompilerFlag)
+# CHECK_CXX_COMPILER_FLAG("-Wno-error=date-time" HAS_WARNING_DATE_TIME)
+# if(HAS_WARNING_DATE_TIME)
+#   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=date-time")
+# endif()
+
+message("If KurentoHelpers is not found, you need to install 'kms-cmake-utils' from the Kurento repository")
 find_package(KurentoHelpers REQUIRED)
 
-include (KurentoGitHelpers)
+include(KurentoGitHelpers)
+get_git_version(PROJECT_VERSION 6.6.2-dev)
+install_git_hook(pre-commit ${CMAKE_CURRENT_SOURCE_DIR}/hooks/pre-commit.hook)
 
-get_git_version (PROJECT_VERSION 6.6.2-dev)
-install_git_hook (pre-commit ${CMAKE_CURRENT_SOURCE_DIR}/hooks/pre-commit.hook)
-
-message (STATUS "Compiling ${PROJECT_NAME}-${PROJECT_VERSION}")
-
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
+message(STATUS "Compiling ${PROJECT_NAME}-${PROJECT_VERSION}")
 
 include(GNUInstallDirs)
 
-set (DISABLE_TESTS FALSE CACHE BOOL "Disable make check")
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror -std=c++11 -Wno-deprecated-declarations -DGST_DISABLE_DEPRECATED")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Werror -std=c99 -DGST_DISABLE_DEPRECATED")
-
-include(CheckCXXCompilerFlag)
-
-CHECK_CXX_COMPILER_FLAG("-Wno-error=date-time" COMPILER_SUPPORTS_DATETIME_ERROR)
-if (COMPILER_SUPPORTS_DATETIME_ERROR)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=date-time")
-endif ()
-
+set(DISABLE_TESTS FALSE CACHE BOOL "Disable make check")
 set(CUSTOM_PREFIX "kurento")
 set(INCLUDE_PREFIX "include/${CUSTOM_PREFIX}")
 set(LIB_PREFIX "lib")
 
-include (GenericFind)
+include(GenericFind)
 
-find_package(PkgConfig)
 generic_find(LIBNAME Boost COMPONENTS system filesystem program_options unit_test_framework thread log REQUIRED)
+
 find_package(OpenSSL REQUIRED)
 
 generic_find(LIBNAME KMSCORE VERSION ^6.6.0 REQUIRED)
+
+find_package(PkgConfig)
 pkg_check_modules(GLIBMM REQUIRED glibmm-2.4)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.5)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.5>=1.7.0~0)
 pkg_check_modules(GSTREAMER_SDP REQUIRED gstreamer-sdp-1.5>=1.7.0~0)
 pkg_check_modules(EVENT REQUIRED libevent>=2.0.16-stable)
 
-check_version_internal (>=2.6.2 sigc++-2.0_VERSION OUTPUT_ERROR)
-if (DEFINED OUTPUT_ERROR AND NOT ${OUTPUT_ERROR} EQUAL "")
-  set (FIX_SIGC TRUE)
+check_version_internal(>=2.6.2 sigc++-2.0_VERSION OUTPUT_ERROR)
+if(DEFINED OUTPUT_ERROR AND NOT ${OUTPUT_ERROR} EQUAL "")
+  set(FIX_SIGC TRUE)
 else()
-  set (FIX_SIGC FALSE)
+  set(FIX_SIGC FALSE)
 endif()
 
-set (TEST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test)
+set(TEST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test)
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 add_subdirectory(server)
@@ -66,4 +76,3 @@ add_subdirectory(test)
 install(FILES kurento.conf.json sdp_pattern.txt DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/${CUSTOM_PREFIX})
 
 add_subdirectory(scaffold)
-
