CMake: Change from TEST_PROPERTIES to TEST_VARIABLES across all projects
- Unify irregular code style: use CMake, no space after function names.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,16 @@
-include (TestHelpers)
+include(TestHelpers)
+set(TEST_VARIABLES
+  "MEDIA_SERVER_CONF_FILE=${CMAKE_CURRENT_SOURCE_DIR}/../kurento.conf.json"
+  "SERVER_DIR=${CMAKE_CURRENT_BINARY_DIR}/../server/kurento-media-server"
+  "GST_PLUGIN_PATH=$ENV{GST_PLUGIN_PATH}:${CMAKE_BINARY_DIR}"
+  "KURENTO_MODULES_PATH=$ENV{KURENTO_MODULES_PATH}:${CMAKE_BINARY_DIR}"
+  "BOOST_TEST_CATCH_SYSTEM_ERRORS=no"
+)
 
 add_definitions(-DBOOST_TEST_DYN_LINK -D_WEBSOCKETPP_CPP11_STL_ -pthread)
 
-add_library (base_test EXCLUDE_FROM_ALL BaseTest.cpp)
-set_property (TARGET base_test
+add_library(base_test EXCLUDE_FROM_ALL BaseTest.cpp)
+set_property(TARGET base_test
   PROPERTY
     INCLUDE_DIRECTORIES
       ${KMSCORE_INCLUDE_DIRS}
@@ -14,15 +21,7 @@ target_link_libraries(base_test
   ${Boost_LIBRARIES}
 )
 
-if (NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
-
-set (TEST_PROPERTIES
-  "MEDIA_SERVER_CONF_FILE=${CMAKE_CURRENT_SOURCE_DIR}/../kurento.conf.json"
-  "SERVER_DIR=${CMAKE_CURRENT_BINARY_DIR}/../server/kurento-media-server"
-  "GST_PLUGIN_PATH=$ENV{GST_PLUGIN_PATH}:${CMAKE_BINARY_DIR}"
-  "KURENTO_MODULES_PATH=$ENV{KURENTO_MODULES_PATH}:${CMAKE_BINARY_DIR}"
-  "BOOST_TEST_CATCH_SYSTEM_ERRORS=no"
-)
+if(NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
 
 add_test_program(test_server_json server_json_test.cpp)
 add_dependencies(test_server_json
@@ -37,16 +36,16 @@ target_link_libraries(test_server_json
   -pthread
   base_test
 )
-set_property (TARGET test_server_json
+set_property(TARGET test_server_json
   PROPERTY
     INCLUDE_DIRECTORIES
       ${KMSCORE_INCLUDE_DIRS}
       ${CMAKE_CURRENT_SOURCE_DIR}/../server/transport/websocket
 )
 
-set (ENABLE_RESOUCES_CHECKS FALSE CACHE BOOL "Enable resouce limits tests")
+set(ENABLE_RESOUCES_CHECKS FALSE CACHE BOOL "Enable resouce limits tests")
 
-if (${ENABLE_RESOUCES_CHECKS})
+if(${ENABLE_RESOUCES_CHECKS})
   add_test_program(test_resources_limit resources_limit_test.cpp)
   add_dependencies(test_resources_limit
     kurento-media-server
@@ -60,13 +59,13 @@ if (${ENABLE_RESOUCES_CHECKS})
     -pthread
     base_test
   )
-  set_property (TARGET test_resources_limit
+  set_property(TARGET test_resources_limit
     PROPERTY
       INCLUDE_DIRECTORIES
         ${KMSCORE_INCLUDE_DIRS}
         ${CMAKE_CURRENT_SOURCE_DIR}/../server/transport/websocket
   )
-endif ()
+endif()
 
 add_test_program(test_server_events server_events_test.cpp)
 add_dependencies(test_server_events
@@ -81,7 +80,7 @@ target_link_libraries(test_server_events
   -pthread
   base_test
 )
-set_property (TARGET test_server_events
+set_property(TARGET test_server_events
   PROPERTY
     INCLUDE_DIRECTORIES
       ${KMSCORE_INCLUDE_DIRS}
@@ -102,7 +101,7 @@ target_link_libraries(test_server_json_session
   -pthread
   base_test
 )
-set_property (TARGET test_server_json_session
+set_property(TARGET test_server_json_session
   PROPERTY
     INCLUDE_DIRECTORIES
       ${KMSCORE_INCLUDE_DIRS}
@@ -122,13 +121,13 @@ target_link_libraries(test_server_duplicate_requests
   -pthread
   base_test
 )
-set_property (TARGET test_server_duplicate_requests
+set_property(TARGET test_server_duplicate_requests
   PROPERTY INCLUDE_DIRECTORIES
     ${KMSCORE_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/../server/transport/websocket
 )
 
-add_test_program (test_config_read
+add_test_program(test_config_read
   config_read_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../server/loadConfig.cpp)
 target_link_libraries(test_config_read
@@ -139,13 +138,13 @@ target_link_libraries(test_config_read
   ${KMSCORE_LIBRARIES}
   -pthread
 )
-set_property (TARGET test_config_read
+set_property(TARGET test_config_read
   PROPERTY INCLUDE_DIRECTORIES
     ${KMSCORE_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/../server
 )
 
-add_test_program (test_registrar registrar_test.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../server/transport/websocket/WebSocketRegistrar.cpp)
+add_test_program(test_registrar registrar_test.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../server/transport/websocket/WebSocketRegistrar.cpp)
 target_link_libraries(test_registrar
   ${Boost_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
@@ -155,7 +154,7 @@ target_link_libraries(test_registrar
   ${OPENSSL_LIBRARIES}
   -pthread
 )
-set_property (TARGET test_registrar
+set_property(TARGET test_registrar
   PROPERTY INCLUDE_DIRECTORIES
     ${KMSCORE_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/../server/transport/websocket
