Debian: Specify [min,max] versions of libssl-dev
This prevents usage of incorrect versions in more up to date
distributions. LibSSL made some breaking API changes in version 1.1.0.

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends:
  libboost-thread-dev,
  libboost-log-dev,
  libevent-dev,
- libssl-dev
+ libssl-dev (>= 1.0.2), libssl-dev (<< 1.1.0) | libssl1.0-dev
 Standards-Version: 3.9.4
 
 Package: kurento-media-server-6.0
