--- a/.build.yaml
+++ b/.build.yaml
@@ -1,4 +1,7 @@
 dependencies:
   - name: kms-core
+    version: ">= 6.6.2"
   - name: kms-elements
+    version: ">= 6.6.2"
   - name: kms-filters
+    version: ">= 6.6.2"
